--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Phasedbook</title>
     <script src="https://kit.fontawesome.com/a65be0858d.js" crossorigin="anonymous"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1208.0.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
