--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Phasedbook</title>
     <script src="https://kit.fontawesome.com/a65be0858d.js" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   </head>
   <body>
     <div id="root"></div>
