added socket io script tag

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Phasedbook</title>
     <script src="https://kit.fontawesome.com/a65be0858d.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://phasedbook.herokuapp.com/socket.io/socket.io.js"></script>
   </head>
   <body>
     <div id="root"></div>
