--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Phasedbook</title>
     <script src="https://kit.fontawesome.com/a65be0858d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
   </head>
   <body>
     <div id="root"></div>
